--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN= 7822320733:AAHHQ9l6bt92Kgm9IdEF3R0gZy3Gp-ZxOD8
-ADMIN_ID= 1929322157
+BOT_TOKEN= add ur token here
+ADMIN_ID= add ur telegram id here
