--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN= add ur token here
-ADMIN_ID= add ur telegram id here
+BOT_TOKEN= "add url telegram token"
+ADMIN_ID= "add admin id(telegam)"
