--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN= "add url telegram token"
-ADMIN_ID= "add admin id(telegam)"
+BOT_TOKEN= "7822320733:AAHHQ9l6bt92Kgm9IdEF3R0gZy3Gp-ZxOD8"
+ADMIN_ID= "1929322157"
